# moire

./: .Rbuildignore  .ccls  .clang-format  .gitignore  .lintr  404.html  AGENTS.md  DESCRIPTION  JUSTFILE.md  LICENSE.html  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.html  README.md  _pkgdown.yml  authors.html  configure  configure.ac  index.html  justfile  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  pkgdown.yaml  pr-commands.yaml
R/: RcppExports.R  data.R  initialization_diagnostics.R  mcmc.R  moire-package.R  simulator.R  summary.R  utils.R
articles/: demo.html  index.html  mcmc_demo.html  namibia.html
benchmarks/: prob_any_missing_benchmark.cpp  ragged_multivector_benchmark.cpp
cpp/: CMakeLists.txt  README.md  build_tests.sh  run_tests.sh
cpp/benchmarks/: benchmark_framework.hpp  multivector_benchmark1.cpp  multivector_benchmark2.cpp  multivector_regression_benchmark.cpp  prob_any_missing_benchmark.cpp  ragged_multivector_benchmark.cpp
cpp/tests/: distance_matrix_test.cpp  multivector_tests.cpp  test_framework.hpp  zeta_mobius_tests.cpp
cpp_tests/: multivector_benchmark.cpp  multivector_test.cpp  run_benchmark.sh  run_distance_test.sh  run_test.sh  test_distance_matrix.cpp
cpp_tests/benchmarks/: multivector_benchmark.cpp
data/: mcmc_results.rda  namibia_data.rda  regional_allele_frequencies.rda  simulated_data.rda
data-raw/: mcmc_results.R  namibia_data.R  simulated_data.R
data-raw/xls/: elife-43510-supp1-v2.xlsx
examples/: custom_clustering_example.R  parallel_ibd.r
inst/: CITATION  COPYRIGHTS
inst/scripts/: bench_pam_driver.R  bench_pam_run.R  profile_mcmc.R
inst/tutorials/introduction/: introduction.Rmd
inst/tutorials/introduction/data/: mozambique.csv
inst/tutorials/moire_to_dcifer/: moire_to_dcifer.Rmd
man/: apply_permutation.Rd  calculate_eda.Rd  calculate_he.Rd  calculate_map_allele_frequencies.Rd  calculate_med_allele_freqs.Rd  calculate_median_allele_frequencies.Rd  calculate_naive_allele_frequencies.Rd  calculate_naive_coi.Rd  calculate_naive_coi_offset.Rd  cat_progress_header.Rd  combine_simulated_data.Rd  convert_to_long_form.Rd  correct_label_switching.Rd  find_optimal_permutation.Rd  get_effective_coi_vectors.Rd  get_relatedness_vectors.Rd  load_delimited_data.Rd  load_long_form_data.Rd  mcmc_results.Rd  moire_prof_reset.Rd  moire_prof_stats.Rd  namibia_data.Rd  plot_chain_swaps.Rd  prepare_initial_allele_frequencies.Rd  rdirichlet.Rd  regional_allele_frequencies.Rd  run_mcmc.Rd  sim_data.Rd  simulate_allele_frequencies.Rd  simulate_data.Rd  simulate_locus_allele_frequencies.Rd  simulate_observed_allele.Rd  simulate_observed_genotype.Rd  simulate_sample_coi.Rd  simulate_sample_genotype.Rd  simulate_sample_moi.Rd  simulated_data.Rd  summarize_allele_freq_fn.Rd  summarize_allele_freqs.Rd  summarize_coi.Rd  (+7 more)
man/figures/: logo.ai  moire_logo.ai
news/: index.html
pkgdown/: extra.css
reference/: calculate_he.html  calculate_med_allele_freqs.html  calculate_median_allele_frequencies.html  calculate_naive_allele_frequencies.html  calculate_naive_coi.html  calculate_naive_coi_offset.html  index.html  load_delimited_data.html  load_long_form_data.html  mcmc_results.html  pipe.html  plot_chain_swaps.html  rdirichlet.html  run_mcmc.html  simulate_allele_frequencies.html  simulate_data.html  simulate_locus_allele_frequencies.html  simulate_observed_allele.html  simulate_observed_genotype.html  simulate_sample_coi.html  simulate_sample_genotype.html  simulate_sample_moi.html  simulated_data.html  summarize_allele_freq_fn.html  summarize_allele_freqs.html  summarize_coi.html  summarize_effective_coi.html  summarize_epsilon_neg.html  summarize_epsilon_pos.html  summarize_he.html  summarize_relatedness.html
src/: Data.cpp  Data.h  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  chain.cpp  chain.h  chain2.cpp  combination_indices_generator.cpp  combination_indices_generator.h  distance_matrix.h  env_defs.h  genotyping_data.cpp  genotyping_data.h  initialization_diagnostics.h  lookup.cpp  lookup.h  main.cpp  main.h  mcmc.cpp  mcmc.h  mcmc_progress_bar.cpp  mcmc_progress_bar.h  mcmc_utils.cpp  mcmc_utils.h  mobius_compare.cpp  multivector.h  multivector_1d.h  multivector_algorithms.h  multivector_dispatch.h  multivector_ops.h  parallel_backend.h  parameters.cpp  parameters.h  prob_any_missing.cpp  prob_any_missing.h  profiler.cpp  profiler.h  ragged_multivector.h  (+4 more)
src/include/spline/src/: spline.h
tests/: testthat.R
tests/testthat/: test-initial-allele-frequencies.R  test-initialization-diagnostics.R  test-label-switching.R  test-mcmc.R  test-population-assignments.R  test-summary.R  test-utils.R
vignettes/: .gitignore  demo.Rmd  mcmc_demo.Rmd  namibia.Rmd  namibia_multipop.Rmd
